--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "braintree/braintree_php": "^3.38",
         "cartalyst/stripe-laravel": "^9.0",
         "fideloper/proxy": "^4.0",
         "hardevine/shoppingcart": "^2.5",
